--- a/Bank/Bank.csproj
+++ b/Bank/Bank.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="src\Shared\" />
+  </ItemGroup>
+
 </Project>
